move java to  monorepo